--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "antd-input-otp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An OTP Input Component based on Ant Design Component Library for React.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.es.js",
   "scripts": {
     "build": "rollup -c",
+    "patch": "npm version patch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
