--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
   "author": "Ralfarios",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-typescript": "^11.1.0",
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@types/node": "^20.1.0",
     "@types/react": "^18.2.6",
-    "antd": "^5.5.0",
+    "antd": "^5.9.0",
     "classnames": "^2.3.2",
     "postcss": "^8.4.23",
-    "rollup": "^2.79.1",
+    "rollup": "^3.26.2",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "antd": ">=4.19.0",
