--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "types": ["node", "jest", "@testing-library/jest-dom"],
 
     /* Type Checking */
     "strict": true,
