--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "ES5",
-    "jsx": "react",
+    "jsx": "react-jsx",
 
     /* Modules */
     "module": "ESNext",
