--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm run clean && rollup -c",
     "patch": "npm version patch",
     "lint": "eslint ./src --ext .jsx,.js,.ts,.tsx --fix --ignore-path ./.eslintignore --report-unused-disable-directives --max-warnings 0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [
     "antd",
@@ -32,6 +33,9 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@commitlint/cz-commitlint": "^17.7.2",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-node-resolve": "^15.1.0",
@@ -43,9 +47,11 @@
     "@typescript-eslint/parser": "^6.7.0",
     "antd": "^5.9.0",
     "classnames": "^2.3.2",
+    "commitizen": "^4.3.0",
     "eslint": "^8.49.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
+    "husky": "^8.0.3",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "rollup": "^3.26.2",
