--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antd-input-otp",
-  "version": "2.0.0+1",
+  "version": "2.0.1",
   "description": "An OTP Input Component based on Ant Design Component Library for React.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
