--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "antd-input-otp",
-  "version": "2.0.1",
+  "version": "2.0.3",
   "description": "An OTP Input Component based on Ant Design Component Library for React.",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.es.js",
   "scripts": {
     "clean": "npm run clean:win && npm run clean:lin",
     "clean:win": "node -e \"if (process.platform === 'win32') process.exit(1)\" || , if exist dist rmdir /Q /S dist",
