--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antd-input-otp",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "An OTP Input Component based on Ant Design Component Library for React.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -11,7 +11,7 @@
     "build": "npm run clean && rollup -c",
     "patch": "npm version patch",
     "lint": "eslint ./src --ext .jsx,.js,.ts,.tsx --fix --ignore-path ./.eslintignore --report-unused-disable-directives --max-warnings 0",
-    "test": "jest",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
   "keywords": [
@@ -41,36 +41,23 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.2",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.5",
     "@types/node": "^20.1.0",
     "@types/react": "^18.2.6",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
-    "antd": "^5.12.2",
-    "babel-jest": "^29.7.0",
-    "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
+    "antd": "^5.9.0",
     "classnames": "^2.3.2",
     "commitizen": "^4.3.0",
     "eslint": "^8.49.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-mock": "^29.7.0",
     "husky": "^8.0.3",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "rollup": "^3.26.2",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^5.1.6"
   },
